src/test/ui/pattern/usefulness/issue-80501-or-pat-and-macro.stderr
error: unreachable pattern
  --> $DIR/issue-80501-or-pat-and-macro.rs:12:9
   |
LL |         ApplicationTy($ctor)
   |         ^^^^^^^^^^^^^^^^^^^^
...
LL |         ty_app!(TypeCtor::Array) | ty_app!(TypeCtor::Slice) => {}
   |                                    ------------------------ in this macro invocation
   |
note: the lint level is defined here
  --> $DIR/issue-80501-or-pat-and-macro.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

